Created fraternityTree.html - Tweaked nav bar - All pages pass HTML5 validation

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,8 +15,9 @@
     		<div class="row">
     			<nav class="navbar navbar-default">
     				<div class="container-fluid">
-    					<div class="navbar-header">
-    						<a class="navbar-brand" href="index.html">Triio</a>
+    					<div class="navbar-header" style="vertical-align:middle;">
+    						<!-- <a class="navbar-brand" href="index.html">Triio</a> -->
+    						<a href="index.html"><img src="assets/triio.png" alt="Triio" width="95"></a>
     					</div>
     					<div>
     						<ul class="nav navbar-nav navbar-right">
